# ppproject

./: .gitattributes  .gitignore  .gitmodules  MSVC-Build-Instructions.md  README.md  dev_env.bat
ppproject/: .gitignore  __init__.py  filter.py  metadata.py  pipeline.py  segment.py  setup.py  spectrogram.py  splitter.py
ppproject/channels/: __init__.py  audiochannel.py
ppproject/filters/: __init__.py  lowpassfilter.py  splitter.py
ppproject/native/: .gitignore  CMakeLists.txt  CMakeSettings.json  audiofile.cpp  filereader.cpp  lowpassfilter.cpp  noiseremoval.cpp  samplebuffer.cpp  samplebuffer.h  sampleconversion.h  spectrogram.cpp
ppproject/native/shared/: CMakeLists.txt  format.h  gcd.h  log.cpp  string_helpers.cpp  string_helpers.h  types.h
ppproject/native/splitter/: splitter.cpp
ppproject/outputs/: __init__.py  fileoutput.py  iteratoroutput.py  nulloutput.py  spectrogramimage.py
ppproject/sources/: __init__.py  filesource.py
ppproject/util/: __init__.py  bufferio.py
tests/: filereader.py  filesource.py  metadata.py  outputiterator.py  samplebuffer.py  spectrogram.py  spectrogrampipeline.py  splitter.py  test.py  test_noise_removal.py
